# upl_microservice

./: .dockerignore  .gitignore  Cargo.toml  DEV.md  Dockerfile  Makefile  README.md
src/: _upl.rs  archive.rs  id.rs  index.rs  lib.rs  main.rs  prelude.rs  reservation.rs  upl.rs
src/migration/: mod.rs  note.txt  price.rs  product.rs  quantity.rs
