[package]
authors = ["Peter <mezeipetister@gmail.com>"]
edition = "2018"
name = "upl_microservice"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.2"
chrono = {version = "0.4", features = ["serde"]}
futures = "0.3.8"
futures-util = "0.3.8"
gzlib = "*"
nanoid = "0.3.0"
packman = "*"
prost = "0.6"
serde = {version = "1.0", features = ["derive"]}
serde_yaml = "0.8"
tokio = {version = "0.2", features = ["full"]}
tonic = "0.3"

[build-dependencies]
tonic-build = "0.3"
